tests/transpiler/x/hs/cross_join_filter.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/cross_join_filter.hs:16:9: error:
    • Couldn't match type ‘[]’ with ‘IO’
      Expected: IO Char
        Actual: [Char]
    • In a stmt of a 'do' block: putStrLn show p.n ++ " " ++ show p.l
      In the expression: do putStrLn show p.n ++ " " ++ show p.l
      In the first argument of ‘mapM_’, namely
        ‘(\ p -> do putStrLn show p.n ++ " " ++ show p.l)’
   |
16 |         putStrLn show p.n ++ " " ++ show p.l
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/cross_join_filter.hs:16:18: error:
    • Couldn't match type: a0 -> String
                     with: [Char]
      Expected: String
        Actual: a0 -> String
    • Probable cause: ‘show’ is applied to too few arguments
      In the first argument of ‘putStrLn’, namely ‘show’
      In the first argument of ‘(++)’, namely ‘putStrLn show p.n’
      In a stmt of a 'do' block: putStrLn show p.n ++ " " ++ show p.l
   |
16 |         putStrLn show p.n ++ " " ++ show p.l
   |                  ^^^^
