tests/transpiler/x/hs/cross_join_filter.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
import qualified Data.Map as Map
letters = ["A", "B"]

nums = [1, 2, 3]

pairs = [Map.fromList [(n, n), (l, l)] | n <- nums, l <- letters, n `mod` 2 == 0]

main :: IO ()
main = do
    putStrLn "--- Even pairs ---"
    mapM_ (\p -> do
        putStrLn show p.n ++ " " ++ show p.l
        ) pairs
